--- a/theme/templates/_scripts.html
+++ b/theme/templates/_scripts.html
@@ -2,7 +2,6 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="{{ STATICURL }}/theme/js/scripts.min.js"></script>
-<script src="//load.sumome.com/" data-sumo-site-id="067409ed2fd09532e177c36af822b68974d4f8521584a09a8a5e9eef05a17a9f" async="async"></script>
 {% if GOOGLE_ANALYTICS %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
@@ -20,3 +19,6 @@
   })();
 </script>
 {% endif %}
+<script src="https://gumroad.com/js/gumroad.js"></script>
+<!-- <script src="https://gumroad.com/js/gumroad-embed.js"></script> -->
+
