--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -728,7 +728,7 @@ h1, h2, h3, h4, h5, h6 {
     display: block;
     max-width: 900px;
     clear: both;
-    margin: 0 auto 2em;
+    margin: 2em auto;
     padding: 0;
     text-align:center;
 }
@@ -753,7 +753,7 @@ h1, h2, h3, h4, h5, h6 {
 @media only screen and (min-width: 37.5em) {
 
 .top-navigation ul {
-    margin: 0.75em 0;
+    margin: 0.5rem 0;
 }
 
 .top-navigation li {
