Restructure content; add meta keywords/descriptions.

--- a/theme/templates/_open-graph.html
+++ b/theme/templates/_open-graph.html
@@ -40,3 +40,8 @@
 }
 </script> 
 {% endif %}  
+
+<link rel="author" href="{{ GOOGLE_PLUS_PUBLISHER }}?rel=author">
+<link rel="publisher" href="{{ GOOGLE_PLUS_PUBLISHER }}?rel=publisher">
+
+
