--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -5,6 +5,11 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 <title>{% block title %}{{ SITENAME }} &#8211; {{ SITESUBTITLE }}{% endblock %}</title>
+<meta charset="utf-8">
+<meta name="description" content="{% block summary %}{{ SITEDESCRIPTION }}{% endblock %}">
+<meta name="keywords" content="{% block keywords %}python,pyqt,matplotlib,numpy,scipy,pathomx,data science,proteomics,metabolomics{% endblock %}">
+
+{% include '_open-graph.html' %}
 {% include '_head.html' %}
 </head>
 
