--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -837,7 +837,7 @@ h1, h2, h3, h4, h5, h6 {
     -webkit-transform: rotate3d(0,  0,  1,  -45deg);
     transform: rotate3d(0,  0,  1,  -45deg);
 }
-.nav .navtoogle {
+.nav .navtoggle {
     font-size: 1.125rem;
     font-weight: normal;
     background-color: #111;
@@ -846,14 +846,14 @@ h1, h2, h3, h4, h5, h6 {
     cursor: pointer;
 }
 @media only screen and (min-width: 37.5em) {
-    .nav .navtoogle {
+    .nav .navtoggle {
     display: none;
 }
 }.nav button {
     border: none;
     background: none;
 }
-.navtoogle i {
+.navtoggle i {
     z-index: -1;
 }
 .icon-menu {
@@ -861,22 +861,19 @@ h1, h2, h3, h4, h5, h6 {
     top: 3px;
     line-height: 0;
 }
-.no-js .nav .navtoggle {
-    display: none;
-}
-.no-js .nav ul {
-    max-height: 30em;
-    overflow: hidden;
-}
-.js .nav ul {
+.nav ul {
     max-height: 0;
     overflow: hidden;
 }
 @media only screen and (min-width: 37.5em) {
-    .js .nav ul {
+    .nav ul {
     max-height: 30em;
+    }
+    #menutoggle {
+        display: none;
+    }
 }
-}.js .nav .active+ul {
+.nav .active+ul {
     max-height: 30em;
     overflow: hidden;
     transition: max-height .3s;
