--- a/theme/templates/_scripts.html
+++ b/theme/templates/_scripts.html
@@ -1,7 +1,16 @@
-<!-- Modernizr -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="{{ STATICURL }}/theme/js/scripts.min.js"></script>
+<!-- Default -->
+<script>
+
+var changeClass = function(a, b, c) {
+        var d = new RegExp("(?:^|\\s+)" + b + "(?:\\s+|$)");
+        return a.className = d.test(a.className) ? a.className.replace(d, " " + c + " ") : a.className.replace(new RegExp("(?:^|\\s+)" + c + "(?:\\s+|$)"), " " + b + " "), a.className
+    }
+
+document.getElementById("menutoggle").onclick = function() {
+    changeClass(this, "navtoggle active", "navtoggle")
+    }
+
+</script>
 {% if GOOGLE_ANALYTICS %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
