Remove global Gumroad JS; it's pulling in 100s of resources

--- a/theme/templates/_scripts.html
+++ b/theme/templates/_scripts.html
@@ -28,6 +28,6 @@ document.getElementById("menutoggle").onclick = function() {
   })();
 </script>
 {% endif %}
-<script src="https://gumroad.com/js/gumroad.js"></script>
-<!-- <script src="https://gumroad.com/js/gumroad-embed.js"></script> -->
+<!-- <script src="https://gumroad.com/js/gumroad.js"></script>
+<script src="https://gumroad.com/js/gumroad-embed.js"></script> -->
 
