Reduce font-loading; move FA to footer

--- a/theme/templates/_footer.html
+++ b/theme/templates/_footer.html
@@ -12,3 +12,5 @@
 <div class="footer-text">
 &copy;{{ CURRENT_YEAR }} Martin Fitzpatrick. Licensed GPLv3 & BSD. Powered by <a href="http://getpelican.com">Pelican</a> using heavily modified <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.
 </div>
+
+<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type='text/css'>
