--- a/theme/templates/_head.html
+++ b/theme/templates/_head.html
@@ -7,7 +7,7 @@
 
 
 
-<link href='http://fonts.googleapis.com/css?family=Arvo:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Arvo:400' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Crimson Text:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
 <!-- http://t.co/dKP3o1e -->
@@ -25,7 +25,6 @@
 	<script src="{{ SITEURL }}/theme/js/vendor/html5shiv.min.js"></script>
 	<script src="{{ SITEURL }}/theme/js/vendor/respond.min.js"></script>
 <![endif]-->
-<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type='text/css'>
 
 <!-- Icons -->
 <!-- 16x16 -->
