Add cache control to htaccess

--- a/theme/templates/_head.html
+++ b/theme/templates/_head.html
@@ -7,8 +7,8 @@
 
 
 
-<link href='http://fonts.googleapis.com/css?family=Arvo:400' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Crimson Text:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Arvo:400' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Crimson Text:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
